# car-depreciation-calculator

./: .flake8  .pre-commit-config.yaml  Readme.md  pyproject.toml
acquisition/: __init__.py  kavak.py
notebooks/: acquisition.ipynb
