[tool.poetry]
name = "car-depreciation-calculator"
version = "0.0.0"
description = "Car depreciation calculator"
authors = ["Mario <mariohdpz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.2.0"
requests = "^2.25.1"
numpy = "^1.19.5"
algoliasearch = "^2.4.0"
pymongo = "^3.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.5.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["acquisition"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
